[project]
name = "insta-reel-info"
version = "0.1.0"
description = "Download Instagram reel videos + metadata (caption, likes, comments, hashtags, transcript) — no login required"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.0",
    "faster-whisper>=1.2.0",
    "pyyaml>=6.0",
    "streamlit>=1.58.0",
    "yt-dlp>=2026.7.4",
]
